# Kitokarosu

./: .gitignore  CMakeLists.txt  readme.md
examples/: CMakeLists.txt  K_best.cpp  basic_usage.cpp  detection_benchmark.cpp  example.cpp
include/: Kitokarosu.hpp
include/Kitokarosu/: Kitokarosu.hpp
